--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,14 +1,31 @@
 
 
-        .container {
+        /* .container {
             min-height: 100vh;
             padding: 0 0.5rem;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-          }
+          } */
 
+          .container {
+            min-height: 100vh;
+            padding: 0 0.5rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%; /* default for mobile */
+        }
+        
+        @media (min-width: 768px) {
+            .container {
+                width: 33.33%; /* 1/3 of the width for desktop */
+                margin: 0 auto; /* center it horizontally */
+            }
+        }
+        
   
           .main {
             padding: 5rem 0;
